Updated the way geyser connects

--- a/example/gate.yml
+++ b/example/gate.yml
@@ -2,7 +2,7 @@ config:
   bind: 0.0.0.0:25565
   onlineMode: true
   servers:
-    server1: 172.30.1.4:25565
+    server1: server1:25565
   try:
     - server1
   forwarding:
