--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,19 +6,21 @@ name: Go
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.23.5'
     - name: Build
-      run: go build -v -o gate server/main.go
+      run: go build -v -o bin/gate server/main.go
+    - name: Archive binaries
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist-without-markdown
+        path: |
+          bin
