--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,9 +18,8 @@ jobs:
         go-version: '1.23.5'
     - name: Build
       run: go build -v -o bin/gate server/main.go
-    - name: Archive binaries
+    - name: Archive gate binary
       uses: actions/upload-artifact@v4
       with:
-        name: dist-without-markdown
-        path: |
-          bin
+          name: gate-geyser
+          path: bin/gate
